--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,66 @@
+version: "3"
+
 services:
   db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
-    image: mariadb:10.6.4-focal
-    # If you really want to use MySQL, uncomment the following line
-    #image: mysql:8.0.27
-    command: "--default-authentication-plugin=mysql_native_password"
-    volumes:
-      - db_data:/var/lib/mysql
-    restart: always
+    image: mysql:8.0
+    container_name: db
+    restart: unless-stopped
+    env_file: .env
     environment:
-      - MYSQL_ROOT_PASSWORD=somewordpress
       - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
-    expose:
-      - 3306
-      - 33060
-  wordpress:
-    image: wordpress:latest
     volumes:
-      - wp_data:/var/www/html
-    ports:
-      - 80:80
-    restart: always
+      - dbdata:/var/lib/mysql
+    command: "--default-authentication-plugin=mysql_native_password"
+    networks:
+      - app-network
+
+  wordpress:
+    depends_on:
+      - db
+    image: wordpress:5.1.1-fpm-alpine
+    container_name: wordpress
+    restart: unless-stopped
+    env_file: .env
     environment:
       - WORDPRESS_DB_HOST=db
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
+      - WORDPRESS_DB_USER=$MYSQL_USER
+      - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=wordpress
+    volumes:
+      - wordpress:/var/www/html
+    networks:
+      - app-network
+
+  webserver:
+    depends_on:
+      - wordpress
+    image: nginx:1.15.12-alpine
+    container_name: webserver
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - wordpress:/var/www/html
+      - ./nginx-conf:/etc/nginx/conf.d
+      - certbot-etc:/etc/letsencrypt
+    networks:
+      - app-network
+
+  certbot:
+    depends_on:
+      - webserver
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - wordpress:/var/www/html
+      - certbot-etc:/etc/letsencrypt
+    command: certonly --webroot --webroot-path=/var/www/html --email your@email.com --agree-tos --no-eff-email --staging --force-renewal -d your_domain -d www.your_domain
+
 volumes:
-  db_data:
-  wp_data:
+  certbot-etc:
+  wordpress:
+  dbdata:
+
+networks:
+  app-network:
